[package]
name = "yoethcli"
version = "1.0.0"
edition = "2021"
description = "A command-line interface wallet for Ethereum ecosystem."
authors = ["Mr Sharafdin <thesharafdin@gmail.com>"]
license = "MIT"

[dependencies]
ethers = "2.0"   # Ethereum library
tokio = { version = "1.0", features = ["full"] }  # Async runtime
dotenv = "0.15"  # Environment variable handling
hex = "0.4"
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8"
dialoguer = "0.10"